set(COMMON_LIB_NAME benchmark_common)
file(GLOB_RECURSE MEMORY_TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB_RECURSE MEMORY_TEST_SOURCES_CU ${CMAKE_CURRENT_SOURCE_DIR}/*.cu)

if(ENABLE_MCC OR ENABLE_NVCC)
    list (APPEND MEMORY_TEST_SOURCES ${MEMORY_TEST_SOURCES_CU})
endif()

foreach(case_path ${MEMORY_TEST_SOURCES})
    string(REGEX REPLACE ".+/(.+)\\..*" "\\1" test_case ${case_path})
    add_executable(${test_case} ${case_path})
    if(ENABLE_MCC)
        set_source_files_properties(${case_path} PROPERTIES LANGUAGE CXX)
        target_compile_options(${test_case} PRIVATE -x musa -mtgpu --cuda-gpu-arch=${COMPILE_ARCH})
        target_link_libraries(${test_case} ${COMMON_LIB_NAME} -lmusa -lmusart -lpthread -lcpuid)
    elseif(ENABLE_NVCC OR ENABLE_CUBRIDGE)
        set_property(TARGET ${test_case} PROPERTY CUDA_STANDARD 17)
        set_property(TARGET ${test_case} PROPERTY CUDA_STANDARD_REQUIRED ON)
        target_link_libraries(${test_case} ${COMMON_LIB_NAME} -lcuda -lcudart -lpthread -lcpuid)
    else()
        target_link_libraries(${test_case} ${COMMON_LIB_NAME} -lmusa -lmusart -lpthread -lcpuid)
    endif()
    add_test(NAME "${test_case}" COMMAND "${test_case}")
endforeach()
