if(ENABLE_NVCC)
    configure_file(elf/EmptyKernel.ptx ./EmptyKernel.ptx COPYONLY)
    configure_file(elf/VectorAdd.ptx ./VectorAdd.ptx COPYONLY)
    configure_file(elf/cdm_parallelism.ptx ./cdm_parallelism.ptx COPYONLY)
    configure_file(elf/basic_funcs.ptx ./basic_funcs.ptx COPYONLY)
    configure_file(elf/basic_funcs_template.ptx ./basic_funcs_template.ptx COPYONLY)
elseif(ENABLE_CUBRIDGE)
    configure_file(elf/EmptyKernel.mcfb ./EmptyKernel.mcfb COPYONLY)
    configure_file(elf/VectorAdd.mcfb ./VectorAdd.mcfb COPYONLY)
    configure_file(elf/cdm_parallelism.mcfb ./cdm_parallelism.mcfb COPYONLY)
    configure_file(elf/basic_funcs.mcfb ./basic_funcs.mcfb COPYONLY)
    configure_file(elf/basic_funcs_template.mcfb ./basic_funcs_template.mcfb COPYONLY)
else()
    configure_file(elf/EmptyKernel.elf ./EmptyKernel.elf COPYONLY)
    configure_file(elf/VectorAdd.elf ./VectorAdd.elf COPYONLY)
    configure_file(elf/cdm_parallelism.elf ./cdm_parallelism.elf COPYONLY)
    configure_file(elf/basic_funcs.elf ./basic_funcs.elf COPYONLY)
    configure_file(elf/basic_funcs_template.elf ./basic_funcs_template.elf COPYONLY)
endif()

set(COMMON_LIB_NAME benchmark_common)
file(GLOB KERNEL_TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB KERNEL_TEST_SOURCES_CU ${CMAKE_CURRENT_SOURCE_DIR}/*.cu)

if(ENABLE_MCC OR ENABLE_NVCC OR ENABLE_CUBRIDGE)
    list (APPEND KERNEL_TEST_SOURCES ${KERNEL_TEST_SOURCES_CU})
endif()


foreach(case_path ${KERNEL_TEST_SOURCES})
    if (NOT ${case_path} MATCHES "elf/")
        string(REGEX REPLACE ".+/(.+)\\..*" "\\1" test_case ${case_path})
        add_executable(${test_case} ${case_path})
        if(ENABLE_CUBRIDGE AND ${case_path} MATCHES "\\.cu$")
            set_source_files_properties(${case_path} PROPERTIES LANGUAGE CUDA)
            target_link_libraries(${test_case} ${COMMON_LIB_NAME} -lcuda -lcudart -lpthread -lcpuid)
            continue()
        endif()
        if(ENABLE_MCC)
            set_source_files_properties(${case_path} PROPERTIES LANGUAGE CXX)
            target_compile_options(${test_case} PRIVATE -x musa -mtgpu --cuda-gpu-arch=${COMPILE_ARCH})
            message(STATUS "Compile ${test_case} with MUSA C++ compiler with --cuda-gpu-arch=${COMPILE_ARCH}")
            target_link_libraries(${test_case} ${COMMON_LIB_NAME} -lmusa -lmusart -lpthread -lcpuid)
        elseif(ENABLE_NVCC)
            set_property(TARGET ${test_case} PROPERTY CUDA_STANDARD 17)
            set_property(TARGET ${test_case} PROPERTY CUDA_STANDARD_REQUIRED ON)
            target_link_libraries(${test_case} ${COMMON_LIB_NAME} -lcuda -lcudart -lpthread -lcpuid)
        elseif(ENABLE_CUBRIDGE)
            set_source_files_properties(${case_path} PROPERTIES LANGUAGE CXX)
            target_link_libraries(${test_case} ${COMMON_LIB_NAME} -lcuda -lcudart -lpthread -lcpuid)
        else()
            target_link_libraries(${test_case} ${COMMON_LIB_NAME} -lcuda -lcudart -lpthread -lcpuid)
        endif()
        add_test(NAME "${test_case}" COMMAND "${test_case}")
    endif()
endforeach()
